[package]
name = "api"
version = "0.1.0"
authors = ["makotia <3mdevmail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.3"
diesel = { version = "^1.1.0", features = ["mysql", "r2d2", "chrono"] }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8.3"
dotenv = "0.15.0"
chrono = { version= "0.4.19", features = ["serde"]}
jsonwebtoken = "7"
